--- a/app/src/main/res/layout/activity_up_order.xml
+++ b/app/src/main/res/layout/activity_up_order.xml
@@ -183,11 +183,90 @@
             android:layout_height="wrap_content"
             android:text="×1"
             android:textColor="@color/A8A8A8"
-            app:layout_constraintTop_toBottomOf="@id/tv_ordertitle"
+            app:layout_constraintTop_toTopOf="@id/tv_specifications"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_specifications"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="商品规格:"
+            android:textColor="@color/A8A8A8"
+            android:textSize="12dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_ordertitle"
+            app:layout_constraintStart_toStartOf="@id/tv_ordertitle"
+            app:layout_constraintEnd_toEndOf="@id/tv_ordertitle"
+            android:visibility="invisible"/>
 
     </com.hjq.shape.layout.ShapeConstraintLayout>
 
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:id="@+id/layout_gift"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        app:shape_solidColor="@color/white"
+        app:shape_radius="11dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_ordertitle"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toEndOf="@id/line_orderleft"
+        app:layout_constraintEnd_toStartOf="@id/line_orderright"
+        android:visibility="gone">
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_giftpic"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:scaleType="centerCrop"
+            app:shapeAppearance="@style/circle11Image2"
+            app:strokeColor="@color/white"/>
+        <TextView
+            android:id="@+id/tv_gifttitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:textColor="@color/F1A1A1A"
+            app:layout_constraintStart_toEndOf="@id/iv_giftpic"
+            app:layout_constraintTop_toTopOf="@id/iv_giftpic"
+            app:layout_constraintEnd_toStartOf="@id/tv_giftprice"
+            android:maxLines="2"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"/>
+        <TextView
+            android:id="@+id/tv_giftprice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/F1A1A1A"
+            android:textSize="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_gifttitle"/>
+        <TextView
+            android:id="@+id/tv_giftnum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="×1"
+            android:textColor="@color/A8A8A8"
+            app:layout_constraintTop_toTopOf="@id/tv_giftspecifications"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_giftspecifications"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="商品规格:"
+            android:textColor="@color/A8A8A8"
+            android:textSize="12dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_gifttitle"
+            app:layout_constraintStart_toStartOf="@id/tv_gifttitle"
+            app:layout_constraintEnd_toEndOf="@id/tv_gifttitle"
+            android:visibility="invisible"/>
+
+    </com.hjq.shape.layout.ShapeConstraintLayout>
     <com.hjq.shape.layout.ShapeConstraintLayout
         android:id="@+id/layout_orderinfo"
         android:layout_width="0dp"
@@ -195,7 +274,7 @@
         android:padding="15dp"
         app:shape_solidColor="@color/white"
         app:shape_radius="11dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_ordertitle"
+        app:layout_constraintTop_toBottomOf="@id/layout_gift"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toEndOf="@id/line_orderleft"
         app:layout_constraintEnd_toStartOf="@id/line_orderright">
@@ -267,13 +346,16 @@
             android:layout_marginTop="20dp"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_ordernote"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="无"
             android:textSize="15dp"
             android:textColor="@color/CCCCCC"
             app:layout_constraintTop_toTopOf="@id/tv_orderlabel04"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_orderlabel04"
+            android:gravity="end"/>
 
     </com.hjq.shape.layout.ShapeConstraintLayout>
 <com.hjq.shape.layout.ShapeConstraintLayout
