--- a/app/src/main/res/layout/banner_image_title.xml
+++ b/app/src/main/res/layout/banner_image_title.xml
@@ -7,8 +7,8 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="h,1:0.58"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/bannerTitle"
