--- a/app/src/main/res/layout/activity_up_order.xml
+++ b/app/src/main/res/layout/activity_up_order.xml
@@ -149,7 +149,8 @@
         app:layout_constraintTop_toBottomOf="@id/layout_ordertop"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toEndOf="@id/line_orderleft"
-        app:layout_constraintEnd_toStartOf="@id/line_orderright">
+        app:layout_constraintEnd_toStartOf="@id/line_orderright"
+        android:visibility="gone">
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_orderpic"
             android:layout_width="80dp"
@@ -267,6 +268,18 @@
             android:visibility="invisible"/>
 
     </com.hjq.shape.layout.ShapeConstraintLayout>
+
+    <com.hjq.shape.layout.ShapeRecyclerView
+        android:id="@+id/gift_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        app:shape_radius="11dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_ordertitle"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toEndOf="@id/line_orderleft"
+        app:layout_constraintEnd_toStartOf="@id/line_orderright"
+        app:shape_solidColor="@color/white"/>
     <com.hjq.shape.layout.ShapeConstraintLayout
         android:id="@+id/layout_orderinfo"
         android:layout_width="0dp"
@@ -274,7 +287,7 @@
         android:padding="15dp"
         app:shape_solidColor="@color/white"
         app:shape_radius="11dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_gift"
+        app:layout_constraintTop_toBottomOf="@id/gift_list"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toEndOf="@id/line_orderleft"
         app:layout_constraintEnd_toStartOf="@id/line_orderright">
