--- a/app/src/main/res/layout/activity_works.xml
+++ b/app/src/main/res/layout/activity_works.xml
@@ -11,12 +11,13 @@
         android:layout_height="44dp"
         app:title="我的作品"
         app:layout_constraintTop_toTopOf="parent" />
-    <com.drake.statelayout.StateLayout
+    <com.drake.brv.PageRefreshLayout
         android:id="@+id/state_works"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/title_works"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:empty_layout="@string/order_empty">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -28,5 +29,5 @@
         tools:listitem="@layout/layout_works"
         tools:itemCount="10"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-    </com.drake.statelayout.StateLayout>
+    </com.drake.brv.PageRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
