--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -20,14 +20,15 @@
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>
 
-   <com.drake.statelayout.StateLayout
+   <com.drake.brv.PageRefreshLayout
        android:id="@+id/state_works"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/project_lineleft"
-       app:layout_constraintEnd_toStartOf="@id/project_lineright">
+       app:layout_constraintEnd_toStartOf="@id/project_lineright"
+       app:empty_layout="@string/order_empty">
 
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
@@ -36,7 +37,6 @@
              android:id="@+id/product_list01"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:listitem="@layout/item_product"
              app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
              android:layout_marginTop="30dp"
              android:visibility="gone"/>
@@ -45,14 +45,12 @@
              android:id="@+id/product_list02"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:listitem="@layout/item_product"
              app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-             android:layout_marginTop="30dp"
-             android:visibility="gone"/>
+             android:layout_marginTop="30dp" />
       </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-   </com.drake.statelayout.StateLayout>
+   </com.drake.brv.PageRefreshLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
