--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -33,8 +33,8 @@
         android:id="@+id/iv_course_pic"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:scaleType="fitXY"
-        app:layout_constraintDimensionRatio="h,1:0.56"
+        android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="h,1:0.562"
         app:layout_constraintTop_toBottomOf="@id/detail_title" />
 
     <TextView
