--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -14,31 +14,22 @@
         app:titleStyle="bold"
         app:leftIconTint="@color/black"
         app:layout_constraintTop_toTopOf="parent"/>
-<!--    <com.drake.brv.PageRefreshLayout-->
-<!--        android:id="@+id/page_order"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/title_order"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:empty_layout="@layout/empty_order"-->
-<!--        app:srlEnableAutoLoadMore="false">-->
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/list_order"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:padding="15dp"-->
-<!--            tools:listitem="@layout/item_order"/>-->
-<!--    </com.drake.brv.PageRefreshLayout>-->
-
-
+    <com.drake.brv.PageRefreshLayout
+        android:id="@+id/page_order"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/title_order"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:empty_layout="@layout/empty_order"
+        app:stateEnabled="true">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_order"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/title_order"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="match_parent"
             android:padding="15dp"
-            tools:listitem="@layout/item_order"/>
+            tools:listitem="@layout/item_order" />
+    </com.drake.brv.PageRefreshLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
