--- a/app/src/main/res/layout/activity_pay_success.xml
+++ b/app/src/main/res/layout/activity_pay_success.xml
@@ -11,8 +11,9 @@
         android:id="@+id/tv_pay_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="支付结果"
+        android:layout_marginTop="20dp"
+        android:text="支付成功"
+        android:textSize="21dp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +25,7 @@
         android:layout_height="44dp"
         app:layout_constraintTop_toTopOf="parent"
         app:lineVisible="false"
-        app:title="支付成功" />
+        />
 
     <com.hjq.shape.view.ShapeButton
         android:id="@+id/btn_gohome"
@@ -43,7 +44,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_pay_result"
         app:shape_radius="11dp"
-        app:shape_solidColor="@color/FE9520" />
+        app:shape_solidColor="@color/FE9520"
+        android:visibility="gone"/>
 
     <com.hjq.shape.view.ShapeButton
         android:id="@+id/btn_goorder"
@@ -62,6 +64,7 @@
         app:layout_constraintStart_toEndOf="@+id/btn_gohome"
         app:layout_constraintTop_toBottomOf="@id/tv_pay_result"
         app:shape_radius="11dp"
-        app:shape_solidColor="@color/FE9520" />
+        app:shape_solidColor="@color/FE9520"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
