--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -7,19 +7,7 @@
     tools:context=".ui.CourseDetailActivity"
     android:background="@color/F5F5F5"
     app:layoutDescription="@xml/activity_course_detail_scene">
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/course_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.04"
-        android:orientation="vertical"/>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/course_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.96"
-        android:orientation="vertical"/>
 
     <com.hjq.bar.TitleBar
         android:id="@+id/detail_title"
@@ -29,62 +17,91 @@
         app:titleStyle="bold"
         app:leftIconTint="@color/black"
         app:layout_constraintTop_toTopOf="parent"/>
-    <ImageView
-        android:id="@+id/iv_course_pic"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="h,1:0.562"
-        app:layout_constraintTop_toBottomOf="@id/detail_title" />
-
-    <TextView
-        android:id="@+id/course_jianjie"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:ellipsize="end"
-        android:textColor="@color/F1A1A1A"
-        android:textSize="14dp"
-        app:layout_constraintEnd_toStartOf="@id/layout_show"
-        app:layout_constraintStart_toEndOf="@id/course_left"
-        app:layout_constraintTop_toBottomOf="@id/iv_course_pic"
-        android:visibility="invisible"/>
-    <LinearLayout
-        android:id="@+id/layout_show"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/course_right"
-        app:layout_constraintBottom_toBottomOf="@id/course_jianjie"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-        <TextView
-            android:id="@+id/tv_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="展开"
-            android:textSize="14dp"
-            android:textColor="@color/FE9520"/>
-        <ImageView
-            android:id="@+id/iv_show"
-            android:layout_width="12dp"
-            android:layout_height="8dp" />
-    </LinearLayout>
-    <com.drake.statelayout.StateLayout
-        android:id="@+id/state_course"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/course_right"
-        app:layout_constraintStart_toEndOf="@id/course_left"
-        app:layout_constraintTop_toBottomOf="@id/layout_show"
-        android:layout_marginTop="30dp">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_course"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/detail_title"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_course" />
-    </com.drake.statelayout.StateLayout>
+            android:layout_height="match_parent">
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/course_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintGuide_percent="0.04"
+                android:orientation="vertical"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/course_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintGuide_percent="0.96"
+                android:orientation="vertical"/>
+            <ImageView
+                android:id="@+id/iv_course_pic"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:scaleType="fitCenter"
+                app:layout_constraintDimensionRatio="h,1"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/course_jianjie"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:ellipsize="end"
+                android:textColor="@color/F1A1A1A"
+                android:textSize="14dp"
+                app:layout_constraintStart_toEndOf="@id/course_left"
+                app:layout_constraintEnd_toStartOf="@id/layout_show"
+                app:layout_constraintTop_toBottomOf="@id/iv_course_pic"
+                android:visibility="invisible"/>
+            <LinearLayout
+                android:id="@+id/layout_show"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@id/course_right"
+                app:layout_constraintBottom_toBottomOf="@id/course_jianjie"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <TextView
+                    android:id="@+id/tv_show"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="展开"
+                    android:textSize="14dp"
+                    android:textColor="@color/FE9520"/>
+                <ImageView
+                    android:id="@+id/iv_show"
+                    android:layout_width="12dp"
+                    android:layout_height="8dp" />
+            </LinearLayout>
+            <com.drake.statelayout.StateLayout
+                android:id="@+id/state_course"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/course_left"
+                app:layout_constraintEnd_toStartOf="@id/course_right"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/layout_show"
+                android:layout_marginTop="30dp">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list_course"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/item_course" />
+            </com.drake.statelayout.StateLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
+
 
 
 
