--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -21,7 +21,7 @@
        app:layout_constraintGuide_percent="0.96"/>
 
    <com.drake.brv.PageRefreshLayout
-       android:id="@+id/state_works"
+       android:id="@+id/state_purchased"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
@@ -30,27 +30,13 @@
        app:layout_constraintEnd_toStartOf="@id/project_lineright"
        app:empty_layout="@string/order_empty">
 
-      <androidx.constraintlayout.widget.ConstraintLayout
-          android:layout_width="match_parent"
-          android:layout_height="match_parent">
+
          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/product_list01"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-             android:layout_marginTop="30dp"
-             android:visibility="gone"/>
-
-         <androidx.recyclerview.widget.RecyclerView
-             android:id="@+id/product_list02"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
              android:layout_marginTop="30dp" />
-      </androidx.constraintlayout.widget.ConstraintLayout>
-
 
    </com.drake.brv.PageRefreshLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
