--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.RecordActivity">
+    android:layout_height="match_parent">
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/record_exo"
         android:layout_width="match_parent"
