--- a/app/src/main/res/layout/activity_works.xml
+++ b/app/src/main/res/layout/activity_works.xml
@@ -12,12 +12,13 @@
         app:title="我的作品"
         app:layout_constraintTop_toTopOf="parent" />
     <com.drake.brv.PageRefreshLayout
-        android:id="@+id/state_works"
+        android:id="@+id/works_refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/title_works"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:empty_layout="@string/order_empty">
+        app:empty_layout="@string/order_empty"
+        app:srlEnableLoadMore="false">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -26,8 +27,6 @@
         android:layout_height="match_parent"
         android:padding="15dp"
         android:background="@color/F5F5F5"
-        tools:listitem="@layout/layout_works"
-        tools:itemCount="10"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
     </com.drake.brv.PageRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
