--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
-        android:background="@drawable/test"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"/>
@@ -30,8 +29,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:maxLines="2"
-        android:ellipsize="end"
-        android:text="宝贝高碳钢儿童平衡车..."/>
+        android:ellipsize="end" />
     <TextView
         android:id="@+id/tv_product_price"
         android:layout_width="wrap_content"
@@ -55,7 +53,6 @@
         android:textSize="18dp"
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
-        android:text="2,678"
         android:gravity="bottom"/>
 
     <TextView
@@ -69,15 +66,12 @@
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
-        android:text="1万+人购买"
         android:gravity="bottom"/>
 
     <TextView
         android:id="@+id/tv_product_desc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="一车三用，低重心黄金三角一
-车多用"
         android:textSize="13dp"
         android:textColor="@color/A8A8A8"
         android:maxLines="2"
