--- a/app/src/main/res/layout/layout_zhujiao.xml
+++ b/app/src/main/res/layout/layout_zhujiao.xml
@@ -20,6 +20,7 @@
         app:shape_solidColor="@color/white">
 
         <com.hjq.shape.view.ShapeButton
+            android:id="@+id/btn_dail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
@@ -63,6 +64,7 @@
     </com.hjq.shape.layout.ShapeConstraintLayout>
 
     <com.hjq.shape.view.ShapeButton
+        android:id="@+id/btn_close"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="10dp"
