--- a/app/src/main/res/layout/layout_zhujiao.xml
+++ b/app/src/main/res/layout/layout_zhujiao.xml
@@ -80,9 +80,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
+        android:layout_marginLeft="50dp"
         android:text="我的助教"
         android:textColor="@color/white"
         android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@+id/layout_content"
-        app:layout_constraintLeft_toLeftOf="@+id/layout_content" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
