--- a/app/src/main/res/layout/activity_works.xml
+++ b/app/src/main/res/layout/activity_works.xml
@@ -18,7 +18,8 @@
         app:layout_constraintTop_toBottomOf="@+id/title_works"
         app:layout_constraintBottom_toBottomOf="parent"
         app:empty_layout="@string/order_empty"
-        app:stateEnabled="true">
+        app:stateEnabled="true"
+        app:srlEnableLoadMore="false">
 
 
     <androidx.recyclerview.widget.RecyclerView
