--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -43,7 +43,7 @@
         app:layout_constraintStart_toStartOf="@id/tv_product_desc"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="￥"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:gravity="center|bottom"
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
@@ -57,6 +57,7 @@
         app:layout_constraintBottom_toBottomOf="@id/tv_product_price"
         android:textStyle="bold"
         android:padding="0dp"
+        android:textSize="18sp"
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
         android:gravity="bottom" />
