--- a/app/src/main/res/layout/layout_works.xml
+++ b/app/src/main/res/layout/layout_works.xml
@@ -72,17 +72,28 @@
             android:background="@color/F5F5F5"
             app:layout_constraintTop_toBottomOf="@id/iv_work" />
 
+    <TextView
+        android:id="@+id/tv_works_title_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/F1A1A1A"
+        android:textSize="14dp"
+        android:layout_marginStart="15.5dp"
+        android:layout_marginTop="3dp"
+        app:layout_constraintStart_toEndOf="@+id/iv_work"
+        app:layout_constraintTop_toTopOf="@id/iv_work"/>
+
         <TextView
             android:id="@+id/tv_works_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15.5dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="5dp"
             android:textColor="@color/F1A1A1A"
-            android:textSize="16dp"
+            android:textSize="11dp"
             app:layout_constraintBottom_toTopOf="@+id/tv_works_time"
             app:layout_constraintStart_toEndOf="@+id/iv_work"
-            app:layout_constraintTop_toTopOf="@id/iv_work"
+            app:layout_constraintTop_toBottomOf="@id/tv_works_title_top"
             app:layout_constraintVertical_chainStyle="spread_inside" />
 
         <TextView
