--- a/app/src/main/res/layout/item_dub_first.xml
+++ b/app/src/main/res/layout/item_dub_first.xml
@@ -68,13 +68,13 @@
         android:text="展开"
         android:textSize="12dp"
         android:textColor="@color/A8A8A8"
-        app:layout_constraintTop_toTopOf="@id/iv_work"
-        app:layout_constraintEnd_toStartOf="@id/iv_show"
-        android:layout_marginEnd="5dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_works_title_top"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="20dp"/>
     <ImageView
         android:id="@+id/iv_show"
         android:layout_width="14dp"
         android:layout_height="14dp"
-        app:layout_constraintTop_toTopOf="@id/iv_work"
+        app:layout_constraintTop_toBottomOf="@id/tv_works_title_top"
         app:layout_constraintEnd_toEndOf="parent"/>
 </com.hjq.shape.layout.ShapeConstraintLayout>
