--- a/app/src/main/res/layout/layout_kefu.xml
+++ b/app/src/main/res/layout/layout_kefu.xml
@@ -82,6 +82,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginBottom="15dp"
         android:text="客服热线"
+        android:visibility="gone"
         android:textColor="@color/white"
         android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@+id/layout_content"
