--- a/app/src/main/res/layout/layout_zhujiao.xml
+++ b/app/src/main/res/layout/layout_zhujiao.xml
@@ -77,6 +77,7 @@
 
     <com.hjq.shape.view.ShapeTextView
         android:id="@+id/top_title"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
