--- a/app/src/main/res/layout/include_exo3.xml
+++ b/app/src/main/res/layout/include_exo3.xml
@@ -70,10 +70,11 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         app:shape_radius="20dp"
+        android:layout_marginRight="10dp"
         app:shape_solidColor="@color/FE9520"
         android:textSize="14dp"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/video_share"
         app:layout_constraintTop_toTopOf="parent"
         android:visibility="gone"/>
 
@@ -107,6 +108,17 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@id/btn_preview"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.hjq.shape.view.ShapeImageView
+        android:id="@+id/iv_dub_start"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/dub_start"/>
 
     <androidx.constraintlayout.widget.Group
         android:layout_width="wrap_content"
