--- a/app/src/main/res/layout/item_dub_first.xml
+++ b/app/src/main/res/layout/item_dub_first.xml
@@ -16,6 +16,7 @@
         android:layout_height="0.5dp"
         android:layout_marginTop="15dp"
         android:background="@color/F5F5F5"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/iv_work" />
 
     <TextView
