--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -358,8 +358,6 @@
         app:layout_constraintTop_toBottomOf="@+id/layout_setting_06"
         app:layout_constraintStart_toEndOf="@id/setting_left"
         app:layout_constraintEnd_toStartOf="@id/setting_right"
-        app:shape_bottomLeftRadius="10dp"
-        app:shape_bottomRightRadius="10dp"
         app:shape_solidColor="@color/white">
 
         <ImageView
@@ -423,16 +421,19 @@
 
     <com.hjq.shape.layout.ShapeConstraintLayout
         android:id="@+id/layout_setting_08"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingBottom="15dp"
         android:paddingEnd="15dp"
         android:paddingStart="15dp"
         android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+        app:layout_constraintEnd_toEndOf="@+id/setting_right"
+
+        app:layout_constraintStart_toStartOf="@+id/setting_left"
         app:layout_constraintTop_toBottomOf="@+id/layout_setting_07"
-        app:shape_radius="10dp"
-        app:shape_solidColor="@color/white"
-        android:visibility="gone">
+        app:shape_bottomLeftRadius="10dp"
+        app:shape_bottomRightRadius="10dp"
+        app:shape_solidColor="@color/white">
 
         <ImageView
             android:id="@+id/iv_setting_fankui"
@@ -448,8 +449,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="用户反馈"
-            android:textSize="15dp"
             android:textColor="#333333"
+            android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
