--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -39,16 +39,18 @@
         app:layout_constraintTop_toBottomOf="@id/title_notice"
         android:layout_marginTop="16dp"/>
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/tv_goSetting"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:text="已开启"
+        android:gravity="center"
         android:textSize="13dp"
         android:textColor="@color/A8A8A8"
         android:drawableRight="@drawable/jump_icon"
         android:drawablePadding="5dp"
         app:layout_constraintTop_toBottomOf="@id/title_notice"
         app:layout_constraintEnd_toStartOf="@id/notice_right"
-        android:layout_marginTop="16dp"/>
+        />
     <TextView
         android:id="@+id/tv_open_notice"
         android:layout_width="0dp"
@@ -115,6 +117,7 @@
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:theme="@style/scstyle"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -154,6 +157,7 @@
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:theme="@style/scstyle"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
