--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -51,4 +51,15 @@
 
     <drawable name="mexo_controls_play">@drawable/suspend_icon</drawable>
     <drawable name="mexo_controls_pause">@drawable/start_icon</drawable>
+
+
+    <style name="scstyle" parent="Theme.AppCompat.Light">
+        <!--开启时的颜色-->
+        <item name="colorControlActivated">#FE9520</item>
+        <!--关闭时的颜色-->
+        <item name="colorSwitchThumbNormal">#383434</item>
+        <!--关闭时的轨迹颜色-->
+        <item name="android:colorForeground">#383434</item>
+    </style>
+
 </resources>
