--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,12 +9,50 @@
     tools:context=".ui.HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_search"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="44dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:paddingTop="5.5dp"
+        android:paddingBottom="5.5dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="@color/FE9520">
 
+
+        <com.hjq.shape.layout.ShapeConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+           app:shape_solidColor="@color/white"
+            app:shape_radius="20dp" />
+
+        <com.hjq.shape.view.ShapeImageView
+            android:id="@+id/iv_search_center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginRight="120dp"
+            android:src="@drawable/service_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.hjq.shape.view.ShapeTextView
+            app:layout_constraintStart_toEndOf="@+id/iv_search_center"
+            android:text="请输入搜索的内容"
+            android:layout_marginLeft="5dp"
+            android:textSize="12sp"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="@+id/iv_search_center"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_search_center"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -78,7 +116,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlebar" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="45dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
