--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,4 +6,140 @@
     android:layout_height="match_parent"
     tools:context=".ui.SearchActivity">
 
+    <TextView
+        android:id="@+id/search_recommend"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="推荐搜索"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/title_bar" />
+
+        <com.example.time_project.util.FloatLayout
+            android:layout_marginTop="15dp"
+            android:id="@+id/floatLayout_recommend"
+            app:layout_constraintStart_toStartOf="@id/guideline4"
+            app:layout_constraintEnd_toEndOf="@+id/guideline5"
+            app:layout_constraintTop_toBottomOf="@+id/search_recommend"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:childHorizontalSpacing="10dp"
+            app:childVerticalSpacing="10dp"
+            />
+
+
+    <TextView
+        android:id="@+id/search_history"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="搜索历史"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/floatLayout_recommend" />
+
+    <ImageView
+        android:id="@+id/history_delete"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+       android:src="@drawable/umeng_socialize_delete"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/guideline5"
+        app:layout_constraintBottom_toBottomOf="@+id/search_history"
+        app:layout_constraintTop_toTopOf="@+id/search_history" />
+
+
+    <com.example.time_project.util.FloatLayout
+        android:layout_marginTop="15dp"
+        android:id="@+id/floatLayout_history"
+        app:layout_constraintStart_toStartOf="@id/guideline4"
+        app:layout_constraintEnd_toEndOf="@+id/guideline5"
+        app:layout_constraintTop_toBottomOf="@+id/search_history"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:childHorizontalSpacing="10dp"
+        app:childVerticalSpacing="10dp"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="15dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="15dp" />
+
+    <com.hjq.bar.TitleBar
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:leftIconTint="@color/black"
+        app:rightTitle="搜索"
+        app:rightTitleColor="@color/black"
+        app:rightTitleSize="16sp">
+
+        <com.hjq.shape.layout.ShapeConstraintLayout
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:id="@+id/layout_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="45dp"
+            app:shape_radius="20dp"
+            app:shape_solidColor="@color/F5F5F5"
+            android:layout_marginRight="45dp">
+
+            <ImageView
+                android:layout_marginLeft="10dp"
+                android:id="@+id/iv_search_icon"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/selector_map"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.hjq.shape.view.ShapeEditText
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:hint="请输入搜索内容"
+                android:textSize="13sp"
+                android:background="@null"
+                android:textColor="@color/CCCCCC"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/iv_clear"
+                app:layout_constraintStart_toEndOf="@+id/iv_search_icon"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <com.hjq.shape.view.ShapeImageView
+                android:id="@+id/iv_clear"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginRight="10dp"
+                android:padding="10dp"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/tasl_close_icon"/>
+
+        </com.hjq.shape.layout.ShapeConstraintLayout>
+    </com.hjq.bar.TitleBar>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
